# fin-proto-runtime-bin-cpp

./: CMakeLists.txt  cbuild.sh
.github/workflows/: cmake-single-platform.yml
include/: bytebuf.hpp  checksum.hpp  codec.hpp  message_factory.hpp
test/: bytebuf_test.cpp  checksum_test.cpp  codec_test.cpp
